--- a/index.html
+++ b/index.html
@@ -66,35 +66,34 @@
 	<div id="corp-row" class="row" style="height: 30vh;">
 		<div class="center-content" style="height: 100%;">
 			
-			<div id="xmeta-selector" class="corp-card" toShow="xmeta-info">
+			<div id="xmeta-selector" class="corp-card" toShow="xmeta-info" index="1">
 				<h1>[XMETA]</h1>
 			</div>
 		
-			<div id="aider-selector" class="corp-card" toShow="aider-info">
+			<div id="aider-selector" class="corp-card" toShow="aider-info" index="2">
 				<h1>[AIDER]</h1>
 			</div>
 			
-			<div id="alwar-selector" class="corp-card" toShow="alwar-info">
-				<img src="https://image.eveonline.com/Corporation/98383832_256.png" alt="ALWAR" style="width: 60%; margin:5px 0 5px 0;">
-				<h1>Alwar Fleet</h1>
+			<div id="alwar-selector" class="corp-card" toShow="alwar-info" index="3">
+				<h1>[ALWAR]</h1>
 			</div>
 			
-			<div id="fevan-selector" class="corp-card" toShow="fevan-info">
+			<div id="fevan-selector" class="corp-card" toShow="fevan-info" index="4">
 				<img src="https://image.eveonline.com/Corporation/98502090_256.png" alt="FEVAN" style="width: 60%; margin:5px 0 5px 0;">
 				<h1>Federal Vanguard</h1>
 			</div>
 			
-			<div id="shom-selector" class="corp-card" toShow="shom-info">
+			<div id="shom-selector" class="corp-card" toShow="shom-info" index="5">
 				<img src="https://image.eveonline.com/Corporation/98535975_256.png" alt="SHOM" style="width: 60%; margin:5px 0 5px 0;">
 				<h1>Shepards Of Mettle</h1>
 			</div>
 			
-			<div id="zrem-selector" class="corp-card" toShow="zrem-info">
+			<div id="zrem-selector" class="corp-card" toShow="zrem-info" index="6">
 				<img src="https://image.eveonline.com/Corporation/98543755_256.png" alt="ZREM" style="width: 60%; margin:5px 0 5px 0;">
 				<h1>Zeon Remnant</h1>
 			</div>
 			
-			<div id="onslt-selector" class="corp-card" toShow="onslt-info">
+			<div id="onslt-selector" class="corp-card" toShow="onslt-info" index="7">
 				<img src="https://image.eveonline.com/Corporation/98561878_256.png" alt="ONSLT" style="width: 60%; margin:5px 0 5px 0;">
 				<h1>Onslaught.</h1>
 			</div>
@@ -116,7 +115,8 @@
 			</div>
 			
 			<div id="alwar-info" class="dynamic-content corp-info">
-				<p>alwar</p>
+				<img src="https://image.eveonline.com/Corporation/98383832_256.png" alt="ALWAR" style="width: 10%; margin:5px 0 5px 0;">
+				<h1>Alwar Fleet</h1>
 			</div>
 			
 			<div id="fevan-info" class="dynamic-content corp-info">
