--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			align-items: center;
 		}
 		
-		/* Corp card styling */
+		/* Corp selector and info-box styling */
 		.corp-card {
 			display: inline-block;
 			box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -67,7 +67,6 @@
 			text-align: center;
 			font-family: arial;
 			float: center;
-			transition: 0.3s;
 		}
 	</style>
 </head>
