Show one by default

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
 <body>
 
-	<div id="corp-row" class="row">
+	<div id="corp-selectors" class="row">
 		<div class="center-content">
 			
 			<a id="xmeta-selector" class="btn btn-default corp-button" toShow="xmeta-info" index="1">[XMETA]</a>
@@ -79,10 +79,12 @@
 		</div>
 	</div>
 	
-	<div id="info-row" class="row">
+	<div id="info" class="row">
 		<div class="center-content">
 			
-			<div id="xmeta-info" class="dynamic-content corp-info">
+			<hr />
+			
+			<div id="xmeta-info" class="corp-info">
 				<img class="corp-logo" src="https://image.eveonline.com/Corporation/901319835_256.png" alt="XMETA">
 				<h1>Mecha Enterprises Fleet</h1>
 				<p>Blah blah blah blah blah blah our corp is great because blah blah</p>
@@ -91,31 +93,37 @@
 			<div id="aider-info" class="dynamic-content corp-info">
 				<img class="corp-logo" src="https://image.eveonline.com/Corporation/1894214152_256.png" alt="AIDER">
 				<h1>Aideron Robotics</h1>
+				<p>Blah blah blah blah blah blah our corp is great because blah blah</p>
 			</div>
 			
 			<div id="alwar-info" class="dynamic-content corp-info">
 				<img class="corp-logo" src="https://image.eveonline.com/Corporation/98383832_256.png" alt="ALWAR">
 				<h1>Alwar Fleet</h1>
+				<p>Blah blah blah blah blah blah our corp is great because blah blah</p>
 			</div>
 			
 			<div id="fevan-info" class="dynamic-content corp-info">
 				<img class="corp-logo" src="https://image.eveonline.com/Corporation/98502090_256.png" alt="FEVAN">
 				<h1>Federal Vanguard</h1>
+				<p>Blah blah blah blah blah blah our corp is great because blah blah</p>
 			</div>
 			
 			<div id="shom-info" class="dynamic-content corp-info">
 				<img class="corp-logo" src="https://image.eveonline.com/Corporation/98535975_256.png" alt="SHOM">
 				<h1>Shepards Of Mettle</h1>
+				<p>Blah blah blah blah blah blah our corp is great because blah blah</p>
 			</div>
 			
 			<div id="zrem-info" class="dynamic-content corp-info">
 				<img class="corp-logo" src="https://image.eveonline.com/Corporation/98543755_256.png" alt="ZREM">
 				<h1>Zeon Remnant</h1>
+				<p>Blah blah blah blah blah blah our corp is great because blah blah</p>
 			</div>
 			
 			<div id="onslt-info" class="dynamic-content corp-info">
 				<img class="corp-logo" src="https://image.eveonline.com/Corporation/98561878_256.png" alt="ONSLT">
 				<h1>Onslaught.</h1>
+				<p>Blah blah blah blah blah blah our corp is great because blah blah</p>
 			</div>
 			
 		</div>
