--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	
 	<style>
 		.dynamic-content {
+			position: absolute;
 			display: none;
 		}
 		
@@ -54,6 +55,12 @@
 			text-align: center;
 			font-family: arial;
 			float: center;
+		}
+		.corp-info {
+			position: relative;
+			left: 50%;
+			width: 40%;
+			transform: translate(-50%);
 		}
 	</style>
 </head>
